# Test-openCV--IKT--VTK--CMake

./: .gitignore  CMakeLists.txt
Test_CMake/: CMakeLists.txt  main.cpp
Test_CMake/Header/: ITKTest.h  VTKTest.h
Test_CMake/Header/ImageWork/: OpenImage.h
Test_CMake/Header/Utils/: DebugLog.h
Test_CMake/Source/: ITKTest.cpp  VTKTest.cpp
Test_CMake/Source/ImageWork/: OpenImage.cpp
